# jbrotli

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  pom.xml  run-javah.bat
jbrotli/: pom.xml
jbrotli-native/: pom.xml
jbrotli-native/darwin/: pom.xml
jbrotli-native/linux-x86/: pom.xml
jbrotli-native/linux-x86-64/: build.sh  pom.xml
jbrotli-native/src/main/cpp/: de_bitkings_jbrotli_BrotliCompressor.cxx  de_bitkings_jbrotli_BrotliCompressor.h  de_bitkings_jbrotli_BrotliDeCompressor.cxx  de_bitkings_jbrotli_BrotliDeCompressor.h  de_bitkings_jbrotli_BrotliError.h  de_bitkings_jbrotli_BrotliStreamCompressor.cxx  de_bitkings_jbrotli_BrotliStreamCompressor.h  de_bitkings_jbrotli_BrotliStreamDeCompressor.cxx  de_bitkings_jbrotli_BrotliStreamDeCompressor.h  param_converter.cxx  param_converter.h  type_converters.h
jbrotli-native/win32-x86/: pom.xml
jbrotli-native/win32-x86-64/: build.bat  pom.xml
jbrotli/src/main/java/de/bitkings/jbrotli/: Brotli.java  BrotliCompressor.java  BrotliDeCompressException.java  BrotliDeCompressor.java  BrotliDe_compressException.java  BrotliDecompressException.java  BrotliError.java  BrotliErrorChecker.java  BrotliException.java  BrotliOutputStream.java  BrotliStreamCompressor.java  BrotliStreamDeCompressor.java
jbrotli/src/test/java/de/bitkings/jbrotli/: BrotliCompressorExtremeTest.java  BrotliCompressorTest.java  (+9 more)
src/main/cpp/: de_bitkings_jbrotli_BrotliCompressor.cxx  de_bitkings_jbrotli_BrotliCompressor.h
src/main/java/de/bitkings/jbrotli/: BrotliCompressor.java
src/test/java/de/bitkings/jbrotli/: BrotliCompressorTest.java  BrotliExampleTest.java
(+8 files in other folders)
